# tau-rs

./: .gitignore  Cargo.toml  README.md
crates/tau-agent/: Cargo.toml
crates/tau-agent/src/: agent_loop.rs  harness.rs  lib.rs  provider.rs  testing.rs  tool.rs
crates/tau-agent/src/session/: entries.rs  jsonl.rs  memory.rs  mod.rs  state.rs  tree.rs
crates/tau-agent/tests/: test_agent_harness.rs  test_agent_loop.rs
crates/tau-ai/: Cargo.toml
crates/tau-ai/src/: anthropic.rs  http.rs  lib.rs  openai.rs  retry.rs  sse.rs  stream.rs
crates/tau-ai/tests/: test_anthropic.rs  test_openai.rs
crates/tau-cli/: Cargo.toml
crates/tau-cli/src/: config.rs  main.rs  repl.rs
crates/tau-cli/src/render/: mod.rs
crates/tau-cli/src/tui/: adapter.rs  app.rs  mod.rs  state.rs  ui.rs
crates/tau-cli/tests/: test_cli.rs
crates/tau-coding/: Cargo.toml
crates/tau-coding/data/: catalog.toml
crates/tau-coding/src/: commands.rs  compaction_prompts.rs  lib.rs  naming.rs  prompt.rs  shell_escape.rs
crates/tau-coding/src/config/: catalog.rs  mod.rs
crates/tau-coding/src/session/: coding_session.rs  compaction.rs  context_window.rs  manager.rs  mod.rs  repair.rs  storage.rs
crates/tau-coding/src/tools/: bash.rs  edit.rs  mod.rs  read.rs  unix_kill.rs  write.rs
crates/tau-coding/tests/: test_coding_session_e2e.rs  test_compat.rs
crates/tau-types/: Cargo.toml
crates/tau-types/src/: event.rs  lib.rs  message.rs  provider_event.rs  session.rs  tool_result.rs
docs/: architecture-issues.md  architecture.md  gap-analysis.md  implementation-plan.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  review-2026-07-19-2.md  review-2026-07-19.md  tui-fixes.md
src/: lib.rs
