[workspace]
resolver = "3"
members = [
    "crates/tau-types",
    "crates/tau-agent",
    "crates/tau-ai",
    "crates/tau-cli",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/huggingface/tau"
authors = ["Tau contributors"]
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
tokio-util = "0.7"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"