[package]
name = "tau-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "tau"
path = "src/main.rs"

[dependencies]
tau-types = { path = "../tau-types" }
tau-agent = { path = "../tau-agent" }
tau-ai = { path = "../tau-ai" }
tau-coding = { path = "../tau-coding" }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-util.workspace = true
futures.workspace = true
dirs = "6"
rustyline = "14"
dotenvy = "0.15"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
